add login action with jwt token generate
